tests/baselines/reference/declarationFilesWithTypeReferences1.errors.txt
/app.ts(2,5): error TS2322: Type 'undefined' is not assignable to type 'Error'.


==== /node_modules/@types/node/index.d.ts (0 errors) ====
    interface Error {
        stack2: string;
    }
    
==== /app.ts (1 errors) ====
    function foo(): Error {
        return undefined;
        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'Error'.
    }